# polymarket-hft-engine

./: .gitignore  Cargo.toml  README.md
core-shared/src/: lib.rs
weather-bot/: Cargo.toml
weather-bot/src/: alerts.rs  config.rs  ctf_math.rs  executor.rs  lib.rs  main.rs  mint_executor.rs  paper.rs  presigner.rs  scanner.rs  state.rs  types.rs  weather_filter.rs
weather-bot/src/watchers/: clob_ws.rs  mempool.rs  mod.rs  onchain.rs
