[package]
name = "weather-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weather-bot"
path = "src/main.rs"

[dependencies]
core-shared = { path = "../core-shared" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
anyhow = "1.0"

# Polymarket official Rust SDK — handles EIP-712 signing, auth, order building.
# The `clob` module is unconditionally exported; only `ws`/`gamma`/`data`/`tracing` are gated features.
polymarket-client-sdk = { version = "0.3", features = ["ws", "gamma", "data", "tracing"] }
alloy-signer-local = "1.7"
alloy-signer = "1.7"
alloy-primitives = "1.3"
alloy-sol-types = "1.3"
k256 = "0.13"
# NB: alloy-provider/transport pull in reqwest 0.13 which conflicts with the
# polymarket-client-sdk reqwest 0.12. The on-chain watcher uses raw
# tokio-tungstenite + hand-rolled JSON-RPC to sidestep the conflict.

# HFT additions: Polygon WSS log subscriptions, CLOB WS client, slug filtering
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2.5"
regex = "1.10"
once_cell = "1.19"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
